# cpp-demo

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  argument-handling.cpp  test.h
.github/workflows/: ci-build-and-test.yaml
